# detr-geo

./: .gitignore  404.html  CHANGELOG.md  CLOUD_SUPPORT.md  CONTRIBUTING.md  MODEL_CARD.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
api-reference/: index.html
docs/: api-reference.md  fine-tuning-guide.md  fine-tuning-vme.md  geospatial-guide.md  index.md  testing-guide.md
examples/: batch_process_directory.py  cloud_cog_example.py  compare_models.py  confidence_threshold_sweep.py  export_for_gis.py  fine_tuned_inference.py  monitor_change_detection.py  parking_lot_analysis.py  quickstart.py  tiled_detection.py  visualize_results.py
fine-tuning-guide/: index.html
geospatial-guide/: index.html
notebooks/: quickstart.ipynb
scripts/: download_vme.py  download_xview.py  generate_test_fixtures.py  monitor_training.sh  preprocess_xview.py  process_xview.py  run_vme_pipeline.py  setup_runpod.sh  test_parking_lots.py  train_vme.py  train_xview.py  validate_vme.py
search/: search_index.json
src/detr_geo/: __init__.py  _adapter.py  _typing.py  core.py  crs.py  datasets.py  exceptions.py  export.py  io.py  tiling.py  training.py  viz.py
testing-guide/: index.html
tests/: conftest.py  test_adapter.py  test_adapter_train.py  test_band_selector.py  test_batch_inference.py  test_core.py  test_core_integration.py  test_crs.py  test_dataset_prep.py  test_datasets.py  test_detection_export.py  test_device.py  test_exceptions.py  test_export.py  test_geo_to_pixel.py  test_geodataframe.py  test_input_validation.py  test_integration_edge_cases.py  test_integration_io.py  test_integration_tiling.py  test_io.py  test_nms.py  test_normalization.py  test_package.py  test_spatial_splitter.py  test_tile_grid.py  test_training.py  test_training_integration.py  test_typing.py  test_viz_leafmap.py  test_viz_matplotlib.py  test_vme_download.py  test_vme_training.py  test_vme_validation.py  test_weight_loading.py
tests/fixtures/: README.md  rgb_uint16.tif  rgb_uint8.tif  rgb_uint8_utm.tif  single_band.tif  with_nodata.tif
